--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Trel Low</title>
-        <link rel='stylesheet' href='app.css'>
+        <link rel="stylesheet" href="app.css">
     </head>
     <body>
         <div id="root" class='container'></div>
